--- a/index.html
+++ b/index.html
@@ -17,11 +17,8 @@
     <div class="container">
         <div class="wrap t-wrap"></div>
         <aside class="menu closed is-closed">
-            <div class="logo">
-                <img src="images/logo.png" alt="" class="big">
-                <img src="images/favicon.png" alt="" class="small">
-            </div>
             <ul class="shortcuts">
+                <li><a href="#" class="toggle"><i class="fa-solid fa-bars"></i></a></li>
                 <li><a href="#"><i class="fa-solid fa-film"></i> <span>Library</span></a></li>
                 <li><a href="#"><i class="fa-solid fa-clock-rotate-left"></i><span> History</span></a></li>
                 <li><a href="#"><i class="fa-solid fa-play"></i><span> Your videos</span></a></li>
@@ -47,20 +44,39 @@
             <div class="aside buttons">
                 <ul>
                     <li><a href="#" class="active"><i class="fa-solid fa-house"></i>Home</a></li>
-                    <li><a href="#"><i class="fa-solid fa-fire"></i>Trending</a></li>
-                    <li><a href="#"><i class="fa-solid fa-film"></i>Library</a></li>
+                    <li><a href="#">
+                            <div class="images">
+                                <img src="images/Icons/shorts.png" alt="" class="b">
+                                <img src="images/Icons/shorts-c.png" alt="" class="c">
+                            </div>
+                            Shorts
+                        </a></li>
+                    <li><a href="#" class="add"><i class="fa-solid fa-plus"></i></a></li>
+                    <li><a href="#">
+                            <div class="images">
+                                <img src="images/Icons/subs.png" alt="" class="b">
+                                <img src="images/Icons/subs-c.png" alt="" class="c">
+                            </div>
+                            Subscriptions
+                        </a></li>
+                    <li><a href="#">
+                            <div class="images">
+                                <img src="images/Icons/library.png" alt="" class="b">
+                                <img src="images/Icons/library-c.png" alt="" class="c">
+                            </div>
+                            Library
+                        </a></li>
                 </ul>
             </div>
         </aside>
         <div class="overlay"></div>
         <header id="navbar">
             <div class="container">
-                <div class="logo">
-                    <img src="images/logo.png" alt="">
-                </div>
                 <div class="nav buttons">
                     <ul>
-                        <li><a href="#" class="toggle"><i class="fa-solid fa-bars"></i></a></li>
+                        <div class="logo">
+                            <img src="images/logo.png" alt="">
+                        </div>
                         <li><a href="#" class="active"><i class="fa-solid fa-house"></i></a></li>
                         <li><a href="#"><i class="fa-solid fa-fire"></i></a></li>
                         <li><a href="#"><i class="fa-solid fa-film"></i></a></li>
@@ -107,9 +123,93 @@
                     </div>
                     <div class="info">
                         <img src="images/abdo.jpg" class="ch-logo">
-                        <h2 class="vid-name">Windows Phone Concept</h2>
+                        <h2 class="vid-name">Windows Phone 11 Concept | Return of the legend</h2>
                         <span class="ch-name">AbdelRahman Sobhy</span>
-                        <span class="views-date">30K views . 5 months ago</span>
+                        <span class="views-date">10K views . 5 months ago</span>
+                    </div>
+                </div>
+                <div class="video">
+                    <div class="thumb">
+                        <img src="images/thumbnails/tailwind.jpg" alt="">
+                    </div>
+                    <div class=" info">
+                        <img src="images/logos/fireship.jpg" class="ch-logo">
+                        <h2 class="vid-name">Ultimate Tailwind CSS Tutorial // Build a Discord-inspired Animated Navbar
+                        </h2>
+                        <span class="ch-name">Fireship</span>
+                        <span class="views-date">674K views . 1 year ago</span>
+                    </div>
+                </div>
+                <div class="video">
+                    <div class="thumb">
+                        <img src="images/thumbnails/currency.jpg" alt="">
+                    </div>
+                    <div class=" info">
+                        <img src="images/elzero.jpg" class="ch-logo">
+                        <h2 class="vid-name">[Arabic] HTML, CSS, JavaScript Tutorials - How To Use Currency API
+                        </h2>
+                        <span class="ch-name">Elzero Web School</span>
+                        <span class="views-date">10K views . 3 weeks ago</span>
+                    </div>
+                </div>
+                <div class="video">
+                    <div class="thumb">
+                        <img src="images/thumbnails/modals.jpg" alt="">
+                    </div>
+                    <div class=" info">
+                        <img src="images/kevin.jpg" class="ch-logo">
+                        <h2 class="vid-name">dialog = the easiest way to make a popup modal
+                        </h2>
+                        <span class="ch-name">Kevin Powell</span>
+                        <span class="views-date">107K views . 7 months ago</span>
+                    </div>
+                </div>
+                <div class="video">
+                    <div class="thumb">
+                        <img src="images/thumbnails/pixel.jpg" alt="">
+                    </div>
+                    <div class=" info">
+                        <img src="images/logos/jerry.jpg" class="ch-logo">
+                        <h2 class="vid-name">Google Pixel 7 Pro – the big ‘bump’ has a few big problems….
+                        </h2>
+                        <span class="ch-name">JerryRigEverything</span>
+                        <span class="views-date">274K views . 14 hours ago</span>
+                    </div>
+                </div>
+                <div class="video">
+                    <div class="thumb">
+                        <img src="images/thumbnails/4k.jpg" alt="">
+                    </div>
+                    <div class=" info">
+                        <img src="images/logos/ltt.jpg" class="ch-logo">
+                        <h2 class="vid-name">YouTube SHOULD charge for 4K. Hear me out.
+                        </h2>
+                        <span class="ch-name">Linus Tech Tips</span>
+                        <span class="views-date">1.7M views . 12 days ago</span>
+                    </div>
+                </div>
+                <div class="video">
+                    <div class="thumb">
+                        <img src="images/thumbnails/xp.png" alt="">
+                    </div>
+                    <div class=" info">
+                        <img src="images/abdo.jpg" class="ch-logo">
+                        <h2 class="vid-name">Remastered Windows XP - (Concept)
+                        </h2>
+                        <span class="ch-name">AbdelRahman Sobhy</span>
+                        <span class="views-date">39K views . 1 year ago</span>
+                    </div>
+                </div>
+                <div class="video">
+                    <div class="thumb">
+                        <img src="images/thumbnails/website.jpg" alt="">
+                    </div>
+                    <div class=" info">
+                        <img src="images/hyper.jpg" class="ch-logo">
+                        <h2 class="vid-name">Have I found the perfect website?
+                        </h2>
+                        <span class="ch-name">Hyperplexed</span>
+                        <span class="views-date">82K views . 2 months ago</span>
                     </div>
                 </div>
                 <div class="video">
@@ -118,122 +218,95 @@
                     </div>
                     <div class="info">
                         <img src="images/abdo.jpg" class="ch-logo">
-                        <h2 class="vid-name">Windows Phone Concept</h2>
+                        <h2 class="vid-name">Windows Phone 11 Concept | Return of the legend</h2>
                         <span class="ch-name">AbdelRahman Sobhy</span>
-                        <span class="views-date">30K views . 5 months ago</span>
+                        <span class="views-date">10K views . 5 months ago</span>
                     </div>
                 </div>
                 <div class="video">
                     <div class="thumb">
-                        <img src="images/thumb.png" alt="">
+                        <img src="images/thumbnails/tailwind.jpg" alt="">
                     </div>
-                    <div class="info">
-                        <img src="images/abdo.jpg" class="ch-logo">
-                        <h2 class="vid-name">Windows Phone Concept</h2>
-                        <span class="ch-name">AbdelRahman Sobhy</span>
-                        <span class="views-date">30K views . 5 months ago</span>
-                    </div>
-                </div>
-                <div class="video">
-                    <div class="thumb">
-                        <img src="images/thumb.png" alt="">
-                    </div>
-                    <div class="info">
-                        <img src="images/abdo.jpg" class="ch-logo">
-                        <h2 class="vid-name">Windows Phone Concept</h2>
-                        <span class="ch-name">AbdelRahman Sobhy</span>
-                        <span class="views-date">30K views . 5 months ago</span>
+                    <div class=" info">
+                        <img src="images/logos/fireship.jpg" class="ch-logo">
+                        <h2 class="vid-name">Ultimate Tailwind CSS Tutorial // Build a Discord-inspired Animated Navbar
+                        </h2>
+                        <span class="ch-name">Fireship</span>
+                        <span class="views-date">674K views . 1 year ago</span>
                     </div>
                 </div>
                 <div class="video">
                     <div class="thumb">
-                        <img src="images/thumb.png" alt="">
+                        <img src="images/thumbnails/currency.jpg" alt="">
                     </div>
-                    <div class="info">
-                        <img src="images/abdo.jpg" class="ch-logo">
-                        <h2 class="vid-name">Windows Phone Concept</h2>
-                        <span class="ch-name">AbdelRahman Sobhy</span>
-                        <span class="views-date">30K views . 5 months ago</span>
-                    </div>
-                </div>
-                <div class="video">
-                    <div class="thumb">
-                        <img src="images/thumb.png" alt="">
-                    </div>
-                    <div class="info">
-                        <img src="images/abdo.jpg" class="ch-logo">
-                        <h2 class="vid-name">Windows Phone Concept</h2>
-                        <span class="ch-name">AbdelRahman Sobhy</span>
-                        <span class="views-date">30K views . 5 months ago</span>
+                    <div class=" info">
+                        <img src="images/elzero.jpg" class="ch-logo">
+                        <h2 class="vid-name">[Arabic] HTML, CSS, JavaScript Tutorials - How To Use Currency API
+                        </h2>
+                        <span class="ch-name">Elzero Web School</span>
+                        <span class="views-date">10K views . 3 weeks ago</span>
                     </div>
                 </div>
                 <div class="video">
                     <div class="thumb">
-                        <img src="images/thumb.png" alt="">
+                        <img src="images/thumbnails/modals.jpg" alt="">
                     </div>
-                    <div class="info">
-                        <img src="images/abdo.jpg" class="ch-logo">
-                        <h2 class="vid-name">Windows Phone Concept</h2>
-                        <span class="ch-name">AbdelRahman Sobhy</span>
-                        <span class="views-date">30K views . 5 months ago</span>
-                    </div>
-                </div>
-                <div class="video">
-                    <div class="thumb">
-                        <img src="images/thumb.png" alt="">
-                    </div>
-                    <div class="info">
-                        <img src="images/abdo.jpg" class="ch-logo">
-                        <h2 class="vid-name">Windows Phone Concept</h2>
-                        <span class="ch-name">AbdelRahman Sobhy</span>
-                        <span class="views-date">30K views . 5 months ago</span>
+                    <div class=" info">
+                        <img src="images/kevin.jpg" class="ch-logo">
+                        <h2 class="vid-name">dialog = the easiest way to make a popup modal
+                        </h2>
+                        <span class="ch-name">Kevin Powell</span>
+                        <span class="views-date">107K views . 7 months ago</span>
                     </div>
                 </div>
                 <div class="video">
                     <div class="thumb">
-                        <img src="images/thumb.png" alt="">
+                        <img src="images/thumbnails/pixel.jpg" alt="">
                     </div>
-                    <div class="info">
-                        <img src="images/abdo.jpg" class="ch-logo">
-                        <h2 class="vid-name">Windows Phone Concept</h2>
-                        <span class="ch-name">AbdelRahman Sobhy</span>
-                        <span class="views-date">30K views . 5 months ago</span>
-                    </div>
-                </div>
-                <div class="video">
-                    <div class="thumb">
-                        <img src="images/thumb.png" alt="">
-                    </div>
-                    <div class="info">
-                        <img src="images/abdo.jpg" class="ch-logo">
-                        <h2 class="vid-name">Windows Phone Concept</h2>
-                        <span class="ch-name">AbdelRahman Sobhy</span>
-                        <span class="views-date">30K views . 5 months ago</span>
+                    <div class=" info">
+                        <img src="images/logos/jerry.jpg" class="ch-logo">
+                        <h2 class="vid-name">Google Pixel 7 Pro – the big ‘bump’ has a few big problems….
+                        </h2>
+                        <span class="ch-name">JerryRigEverything</span>
+                        <span class="views-date">274K views . 14 hours ago</span>
                     </div>
                 </div>
                 <div class="video">
                     <div class="thumb">
-                        <img src="images/thumb.png" alt="">
+                        <img src="images/thumbnails/4k.jpg" alt="">
                     </div>
-                    <div class="info">
-                        <img src="images/abdo.jpg" class="ch-logo">
-                        <h2 class="vid-name">Windows Phone Concept</h2>
-                        <span class="ch-name">AbdelRahman Sobhy</span>
-                        <span class="views-date">30K views . 5 months ago</span>
+                    <div class=" info">
+                        <img src="images/logos/ltt.jpg" class="ch-logo">
+                        <h2 class="vid-name">YouTube SHOULD charge for 4K. Hear me out.
+                        </h2>
+                        <span class="ch-name">Linus Tech Tips</span>
+                        <span class="views-date">1.7M views . 12 days ago</span>
                     </div>
                 </div>
                 <div class="video">
                     <div class="thumb">
-                        <img src="images/thumb.png" alt="">
+                        <img src="images/thumbnails/xp.png" alt="">
                     </div>
-                    <div class="info">
+                    <div class=" info">
                         <img src="images/abdo.jpg" class="ch-logo">
-                        <h2 class="vid-name">Windows Phone Concept</h2>
+                        <h2 class="vid-name">Remastered Windows XP - (Concept)
+                        </h2>
                         <span class="ch-name">AbdelRahman Sobhy</span>
-                        <span class="views-date">30K views . 5 months ago</span>
+                        <span class="views-date">39K views . 1 year ago</span>
                     </div>
                 </div>
-            </div>
+                <div class="video">
+                    <div class="thumb">
+                        <img src="images/thumbnails/website.jpg" alt="">
+                    </div>
+                    <div class=" info">
+                        <img src="images/hyper.jpg" class="ch-logo">
+                        <h2 class="vid-name">Have I found the perfect website?
+                        </h2>
+                        <span class="ch-name">Hyperplexed</span>
+                        <span class="views-date">82K views . 2 months ago</span>
+                    </div>
+                </div>
         </main>
     </div>
 </body>
