--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
                 <div class="nav buttons">
                     <ul>
                         <div class="logo">
-                            <img src="images/logo.png" alt="">
+                            <img src="images/logo.png" alt="" class="big-logo">
+                            <img src="images/small-logo.png" alt="" class="small-logo">
                         </div>
                         <li><a href="#" class="active"><i class="fa-solid fa-house"></i></a></li>
                         <li><a href="#"><i class="fa-solid fa-fire"></i></a></li>
@@ -86,7 +87,13 @@
                     <input type="search" placeholder="Search">
                 </div>
                 <div class="personal buttons">
-                    <ul>
+                    <ul class="menu-list closed">
+                        <li><a href="#" class="second-menu">
+                                <div class="images">
+                                    <img src="images/Icons/menu.png" alt="" class="b">
+                                    <img src="images/Icons/menu-c.png" alt="" class="c">
+                                </div>
+                            </a></li>
                         <li class="search-icon"><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a></li>
                         <li><a href="#"><i class="fa-solid fa-video"></i></a></li>
                         <li><a href="#"><i class="fa-solid fa-bell"></i></a></li>
